# python-text-games

./: README.md  _git.bat  bn.py  forca.py  jogos.py  pyproject.toml  sudoku.py
db/: cidades.txt  frutas.txt  nomes-femininos.txt
python_text_games/: adivinhacao.py  forca.py  jogos.py  main.py  uno.py  util.py
python_text_games/db/: nomes-masculinos.txt  objetos.txt
tests/: test_forca.py
